# python-base-uv

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_something.py
